Horde3D/Bindings/C++/Horde3D.h

/*	Topic: Conventions
		Some conventions for the API.
	
	Horde3D uses a right-handed coordinate system, where y is the up-axis and the positive z-axis is
	pointing out of the screen. The rotations are specified in degrees and rotation direction is
	counter-clockwise when looking down the axis from the the positive end towards the origin. View
	vectors like the camera or light direction are always pointing along the negative z-axis when no
	transformation is applied. Matrices in Horde are stored in a column-major memory layout.
*/


// *************************************************************************************************
// Core Library
// *************************************************************************************************

/* Group: Typedefs and constants */

/*	Constants: Typedefs
	ResHandle	- handle to resource (int)
	NodeHandle	- handle to scene node (int)
*/
typedef int ResHandle;
typedef int NodeHandle;
	/* 	Function: getNodeParamf
			Gets a property of a scene node.
		
		This function returns a specified property of the specified node.
		The property must be of the type float.
		
		Parameters:
			node	- handle to the node to be accessed
			param	- parameter to be accessed
			
		Returns:
			 value of the parameter
	*/
	DLL float getNodeParamf( NodeHandle node, int param );
	
	/* 	Function: setNodeParamf
			Sets a property of a scene node.
		
		This function sets a specified property of the specified node to a specified value.
		The property must be of the type float.
		
		Parameters:
			node	- handle to the node to be modified
			param	- parameter to be modified
			value	- new value for the specified parameter
			
		Returns:
			 true in case of success otherwise false
	*/
	DLL bool setNodeParamf( NodeHandle node, int param, float value );
	/* 	Function: getNodeParami
			Gets a property of a scene node.
		
		This function returns a specified property of the specified node.
		The property must be of the type int or ResHandle.
		
		Parameters:
			node	- handle to the node to be accessed
			param	- parameter to be accessed
			
		Returns:
			 value of the parameter
	*/
	DLL int getNodeParami( NodeHandle node, int param );
	
	/* 	Function: setNodeParami
			Sets a property of a scene node.
		
		This function sets a specified property of the specified node to a specified value.
		The property must be of the type int or ResHandle.
		
		Parameters:
			node	- handle to the node to be modified
			param	- parameter to be modified
			value	- new value for the specified parameter
			
		Returns:
			 true in case of success otherwise false
	*/
	DLL bool setNodeParami( NodeHandle node, int param, int value );
	/* 	Function: getNodeParamstr
			Gets a property of a scene node.
		
		This function returns a specified property of the specified node.
		The property must be of the type string (const char *).

		*Important Note: The pointer is const and allows only read access to the data. Do never try to modify the
        data of the pointer since that can corrupt the engine's internal states!*
		
		Parameters:
			node	- handle to the node to be accessed
			param	- parameter to be accessed
			
		Returns:
			 value of the property or empty string if no such property exists
	*/
	DLL const char *getNodeParamstr( NodeHandle node, int param );
	
	/* 	Function: setNodeParamstr
			Sets a property of a scene node.
		
		This function sets a specified property of the specified node to a specified value.
		The property must be of the type string (const char *).
		
		Parameters:
			node	- handle to the node to be modified
			param	- parameter to be modified
			value	- new value for the specified parameter
			
		Returns:
			 true in case of success otherwise false
	*/
	DLL bool setNodeParamstr( NodeHandle node, int param, const char *value );
	/* 	Function: getNodeAABB
			Gets the bounding box of a scene node.
		
		This function stores the world coordinates of the axis aligned bounding box of a specified node in
		the specified variables. The bounding box is represented using the minimum and maximum coordinates
		on all three axes.
		
		Parameters:
			node				- handle to the node which will be accessed
			minX, minY, minZ	- pointers to variables where minimum coordinates will be stored
			maxX, maxY, maxZ	- pointers to variables where maximum coordinates will be stored
			
		Returns:
			true in case of success otherwise false
	*/
	DLL bool getNodeAABB( NodeHandle node, float *minX, float *minY, float *minZ,
						  float *maxX, float *maxY, float *maxZ );
	
	/* 	Function: findNodes
			Finds scene nodes with the specified properties.
		
		This function loops recursively over all children of startNode and adds them to an internal list
		of results if they match the specified name and type. The result list is cleared each time this
		function is called. The function returns the number of nodes which were found and added to the list.
		
		Parameters:
			startNode	- handle to the node where the search begins
			name		- name of nodes to be searched (empty string for all nodes)
			type		- type of nodes to be searched (SceneNodeTypes::Undefined for all types)
			
		Returns:
			number of search results
	*/
	DLL int findNodes( NodeHandle startNode, const char *name, int type );
	
	/* 	Function: getNodeFindResult
			Gets a result from the findNodes query.
		
		This function returns the n-th (index) result of a previous findNodes query. The result is the handle
		to a scene node with the poperties specified at the findNodes query. If the index doesn't exist in the
		result list the function returns 0.
		
		Parameters:
			index	- index of search result
			
		Returns:
			handle to scene node from findNodes query or 0 if result doesn't exist
	*/
	DLL NodeHandle getNodeFindResult( int index );
	
	/* 	Function: castRay
			Performs a recursive ray collision query.
		
		This function checks recursively if the specified ray intersects the specified node or one of its children.
        The function finds intersections relative to the ray origin and returns the number of intersecting scene
        nodes. The ray is a line segment and is specified by a starting point (the origin) and a finite direction
		vector which also defines its length. Currently this function is limited to returning intersections with Meshes.
		For Meshes, the base LOD (LOD0) is always used for performing the ray-triangle intersection tests.
		
		Parameters:
			node		- node at which intersection check is beginning
			ox, oy, oz	- ray origin
			dx, dy, dz	- ray direction vector also specifying ray length
			numNearest	- maximum number of intersection points to be stored (0 for all)
			
		Returns:
			number of intersections
		*/
	DLL int castRay( NodeHandle node, float ox, float oy, float oz, float dx, float dy, float dz, int numNearest );
	/*	Function: getCastRayResult
			Returns a result of a previous castRay query.

		This functions is used to access the results of a previous castRay query. The index is used to access
		a specific result. The intersection data is copied to the specified variables.

		Parameters:
			index			- index of result to be accessed (range: 0 to number of results returned by castRay)
			node			- handle of intersected node
			distance		- distance from ray origin to intersection point
			intersection	- coordinates of intersection point (float[3] array)

		Returns:
			true if index was valid and data could be copied, otherwise false
	*/
	DLL bool getCastRayResult( int index, NodeHandle *node, float *distance, float *intersection );
	/* Group: Group-specific scene graph functions */
	/* 	Function: addGroupNode
			Adds a Group node to the scene.
		
		This function creates a new Group node and attaches it to the specified parent node.
		
		Parameters:
			parent	- handle to parent node to which the new node will be attached
			name	- name of the node
			
		Returns:
			 handle to the created node or 0 in case of failure
	*/
	DLL NodeHandle addGroupNode( NodeHandle parent, const char *name );
	
	
	/* Group: Model-specific scene graph functions */
	/* 	Function: addModelNode
			Adds a Model node to the scene.
		
		This function creates a new Model node and attaches it to the specified parent node.
		
		Parameters:
			parent		- handle to parent node to which the new node will be attached
			name		- name of the node
			geometryRes	- Geometry resource used by Model node
			
		Returns:
			 handle to the created node or 0 in case of failure
	*/
	DLL NodeHandle addModelNode( NodeHandle parent, const char *name, ResHandle geometryRes );
	
	/* 	Function: setupModelAnimStage
			Configures an animation stage of a Model node.
		
		This function is used to setup the specified animation stage (channel) of the specified Model node.
        
        The function is used for animation blending. There is a fixed number of stages (by default 16) on
        which different animations can be played. The start node determines the first node (Joint or Mesh)
        to which the animation is recursively applied. If the start node is an empty string, the animation
        affects all animatable nodes (Joints and Meshes) of the model. If a NULL-handle is used for animationRes,
		the stage is cleared and the previous animation is removed.
        
        A simple way to do animation mixing is using additive animations. If a stage is configured to be
        additive  the engine calculates the difference between the current frame and the first frame in the
        animation and adds this delta to the current transformation of the joints or meshes.
		
		Parameters:
			modelNode		- handle to the Model node to be modified
			stage			- index of the animation stage to be configured
			animationRes	- handle to Animation resource (can be 0)
			startNode		- name of first node to which animation shall be applied (or empty string)
			additive		- flag indicating whether stage is additive
			
		Returns:
			 true in case of success, otherwise false
	*/
	DLL bool setupModelAnimStage( NodeHandle modelNode, int stage, ResHandle animationRes,
								  const char *startNode, bool additive );
	
	/* 	Function: setModelAnimParams
			Sets the parameters of an animation stage in a Model node.
		
		This function sets the current animation time and weight for a specified stage of the specified model.
        The time corresponds to the frames of the animation and the animation is looped if the
        time is higher than the maximum number of frames in the Animation resource. The weight is used for
        animation blending and determines how much influence the stage has compared to the other active
        stages. When the sum of the weights of all stages is more than one, the animations on the lower
        stages get priority.
		
		Parameters:
			modelNode	- handle to the Model node to be modified
			stage		- index of the animation stage to be modified
			time		- new animation time/frame
			weight		- new blend weight
			
		Returns:
			 true in case of success, otherwise false
	*/
	DLL bool setModelAnimParams( NodeHandle modelNode, int stage, float time, float weight );
	
	/* 	Function: setModelMorpher
			Sets the weight of a morph target.
		
		This function sets the weight of a specified morph target. If the target parameter
        is an empty string the weight of all morph targets in the specified Model node is modified.
        If the specified morph target is not found the function returns false.
		
		Parameters:
			modelNode	- handle to the Model node to be modified
			target		- name of morph target
			weight		- new weight for morph target
			
		Returns:
			 true in case of success, otherwise false
	*/
	DLL bool setModelMorpher( NodeHandle modelNode, const char *target, float weight );
	
	
	/* Group: Mesh-specific scene graph functions */
	/* 	Function: addMeshNode
			Adds a Mesh node to the scene.
		
		This function creates a new Mesh node and attaches it to the specified parent node.
		
		Parameters:
			parent		- handle to parent node to which the new node will be attached
			name		- name of the node
			materialRes	- material resource used by Mesh node
			batchStart	- first triangle index of mesh in Geometry resource of parent Model node
			batchCount	- number of triangle indices used for drawing mesh
			vertRStart	- first vertex in Geometry resource of parent Model node
			vertREnd	- last vertex in Geometry resource of parent Model node
			
		Returns:
			 handle to the created node or 0 in case of failure
	*/
	DLL NodeHandle addMeshNode( NodeHandle parent, const char *name, ResHandle materialRes, 
								int batchStart, int batchCount, int vertRStart, int vertREnd );
	
	/* Group: Joint-specific scene graph functions */
	/* 	Function: addJointNode
			Adds a Joint node to the scene.
		
		This function creates a new Joint node and attaches it to the specified parent node.
		
		Parameters:
			parent		- handle to parent node to which the new node will be attached
			name		- name of the node
			jointIndex	- index of joint in Geometry resource of parent Model node
			
		Returns:
			 handle to the created node or 0 in case of failure
	*/
	DLL NodeHandle addJointNode( NodeHandle parent, const char *name, int jointIndex );
	
	
	/* Group: Light-specific scene graph functions */
	/* 	Function: addLightNode
			Adds a Light node to the scene.
		
		This function creates a new Light node and attaches it to the specified parent node.
        The direction vector of the untransformed light node is pointing along the the negative
        z-axis. The specified material resource can define uniforms and projective textures.
        Furthermore it can contain a shader for doing lighting calculations if deferred shading
        is used. If no material is required the parameter can be zero. The context names
        define which shader contexts are used when rendering shadow maps or doing light calculations for
        forward rendering configurations.
		
		Parameters:
			parent			- handle to parent node to which the new node will be attached
			name			- name of the node
			materialRes		- material resource for light configuration or 0 if not used
			lightingContext	- name of the shader context used for doing light calculations
			shadowContext	- name of the shader context used for doing shadow map rendering
			
		Returns:
			 handle to the created node or 0 in case of failure
	*/
	DLL NodeHandle addLightNode( NodeHandle parent, const char *name, ResHandle materialRes,
								 const char *lightingContext, const char *shadowContext );
	
	/* 	Function: setLightContexts
			Sets the shader contexts used by a light source.
		
		This function sets the lighting and shadow shader contexts of the specified light source. The contexts
        define which shader code is used when doing lighting calculations or rendering the shadow map.
		
		Parameters:
			lightNode		- handle to the Light node to be modified
			lightingContext	- name of the shader context used for performing lighting calculations
			shadowContext	- name of the shader context used for rendering shadow maps
			
		Returns:
			 true in case of success otherwise false
	*/
	DLL bool setLightContexts( NodeHandle lightNode, const char *lightingContext, const char *shadowContext );
	/* Group: Camera-specific scene graph functions */
	/* 	Function: addCameraNode
			Adds a Camera node to the scene.
		
		This function creates a new Camera node and attaches it to the specified parent node.
		
		Parameters:
			parent		- handle to parent node to which the new node will be attached
			name		- name of the node
			pipelineRes	- pipeline resource used for rendering
			
		Returns:
			 handle to the created node or 0 in case of failure
	*/
	DLL NodeHandle addCameraNode( NodeHandle parent, const char *name, ResHandle pipelineRes );
	
	/* 	Function: setupCameraView
			Sets the planes of a camera viewing frustum.
		
		This function calculates the view frustum planes of the specified camera node using the specified view
        parameters.
		
		Parameters:
			cameraNode	- handle to the Camera node which will be modified
			fov			- field of view (FOV) angle
			aspect		- aspect ratio
			nearDist	- distance of near clipping plane
			farDist		- distance of far clipping plane 
			
		Returns:
			 true in case of success otherwise false
	*/
	DLL bool setupCameraView( NodeHandle cameraNode, float fov, float aspect, float nearDist, float farDist );
	
	/* 	Function: calcCameraProjectionMatrix
			Calculates the camera projection matrix.
		
		This function calculates the camera projection matrix used for bringing the geometry to
        screen space and copies it to the specified array.
		
		Parameters:
			cameraNode	- handle to Camera node
			projMat		- pointer to float array with 16 elements
			
		Returns:
			 true in case of success otherwise false
	*/
	DLL bool calcCameraProjectionMatrix( NodeHandle cameraNode, float *projMat );
	/* Group: Emitter-specific scene graph functions */
	/* 	Function: addEmitterNode
			Adds a Emitter node to the scene.
		
		This function creates a new Emitter node and attaches it to the specified parent node.
		
		Parameters:
			parent				- handle to parent node to which the new node will be attached
			name				- name of the node
			materialRes			- handle to Material resource used for rendering
			effectRes			- handle to Effect resource used for configuring particle properties
			maxParticleCount	- maximal number of particles living at the same time
			respawnCount		- number of times a single particle is recreated after dying (-1 for infinite)
			
			
		Returns:
			 handle to the created node or 0 in case of failure
	*/
	DLL NodeHandle addEmitterNode( NodeHandle parent, const char *name, ResHandle materialRes,
								   ResHandle effectRes, int maxParticleCount, int respawnCount );
	
	/* 	Function: advanceEmitterTime
			Advances the time value of an Emitter node.
		
		This function advances the simulation time of a particle system and continues the particle simulation
        with timeDelta being the time elapsed since the last call of this function. The specified
        node must be an Emitter node.
		
		Parameters:
			emitterNode	- handle to the Emitter node which will be modified
			timeDelta	- time delta in seconds
			
		Returns:
			 true in case of success otherwise false
	*/
	DLL bool advanceEmitterTime( NodeHandle emitterNode, float timeDelta );
	/* 	Function: hasEmitterFinished
			Checks if an Emitter node is still alive.
		
		This function checks if a particle system is still active and has living particles or
		will spawn new particles. The specified node must be an Emitter node. The function can be
		used to check when a not infinitely running emitter for an effect like an explosion can be
		removed from the scene.
		
		Parameters:
			emitterNode	- handle to the Emitter node which is checked
			
		Returns:
			 true if Emitter will no more emit any particles, otherwise or in case of failure false
	*/
	DLL bool hasEmitterFinished( NodeHandle emitterNode );